Encabezado con imagen de fondo. Prototipo de tabla de grupo.

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -7,16 +7,99 @@
 
         <!-- Bootstrap CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
-        
+
         <!-- Estilo personalizado CSS -->
         <link href="css/estilo.css" rel="stylesheet">
-        
+
         <title>Proyecto 1 - Mundial</title>
     </head>
     <body>
 
+        <div class="jumbotron jumbotron-fluid encabezado">
+            <div class="container">
+                <h1 class="display-4">Fluid jumbotron</h1>
+                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Equipo</th>
+                                <th scope="col">P</th>
+                                <th scope="col">PJ</th>
+                                <th scope="col">PG</th>
+                                <th scope="col">PE</th>
+                                <th scope="col">PP</th>
+                                <th scope="col">GF</th>
+                                <th scope="col">GC</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Egipto</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>   
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Rusia</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>  
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Arabia Saudita</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>  
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>Uruguay</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>  
+                        </tbody>
+                    </table>
+
+
+                </div>
+                <div class="col-md-2">
+
+                </div>
+            </div>
+        </div>
+
         <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <!-- jQuery first then Bootstrap JS -->
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/bootstrap.js"></script>
     </body>
