Cambios pequeños en el diseño.

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -136,7 +136,7 @@
                             <div class="col-12">
                                 <hr>
                                 <h1 class="text-center my-4">PARTIDOS GRUPO A</h1>
-                                <div id="accordion">
+                                <div id="accordion1">
                                     <ul class="list-group" id="partidos-grupo-1">
                                         <!-- contenido creado dinámicamente -->
                                     </ul>
@@ -159,10 +159,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO B</h1>
-                                <ul class="list-group" id="partidos-grupo-2">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO B</h1>
+                                <div id="accordion2">
+                                    <ul class="list-group" id="partidos-grupo-2">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -181,10 +184,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO C</h1>
-                                <ul class="list-group" id="partidos-grupo-3">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO C</h1>
+                                <div id="accordion3">
+                                    <ul class="list-group" id="partidos-grupo-3">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -203,10 +209,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO D</h1>
-                                <ul class="list-group" id="partidos-grupo-4">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO D</h1>
+                                <div id="accordion4">
+                                    <ul class="list-group" id="partidos-grupo-4">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -225,10 +234,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO E</h1>
-                                <ul class="list-group" id="partidos-grupo-5">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO E</h1>
+                                <div id="accordion5">
+                                    <ul class="list-group" id="partidos-grupo-5">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -247,10 +259,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO F</h1>
-                                <ul class="list-group" id="partidos-grupo-6">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO F</h1>
+                                <div id="accordion6">
+                                    <ul class="list-group" id="partidos-grupo-6">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -269,10 +284,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO G</h1>
-                                <ul class="list-group" id="partidos-grupo-7">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO G</h1>
+                                <div id="accordion7">
+                                    <ul class="list-group" id="partidos-grupo-7">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -291,10 +309,13 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <h1 class="text-center">PARTIDOS GRUPO H</h1>
-                                <ul class="list-group" id="partidos-grupo-8">
-                                    <!-- contenido creado dinámicamente -->
-                                </ul>
+                                <hr>
+                                <h1 class="text-center my-4">PARTIDOS GRUPO H</h1>
+                                <div id="accordion8">
+                                    <ul class="list-group" id="partidos-grupo-8">
+                                        <!-- contenido creado dinámicamente -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
