Cambio en el encabezado. Algo de refactoring sobre el código jquery.

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -23,6 +23,11 @@
         <div class="jumbotron jumbotron-fluid encabezado">
             <div class="container">
                 <div class="row">
+                    <div class="col-12 text-center">
+                        <img src="img/logopromun.png" class="logo-header img-fluid">
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-lg navbar-custom">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,6 +60,7 @@
                         </nav>
                     </div>
                 </div>
+                
             </div>
         </div>
 
@@ -537,13 +543,12 @@
 
 		
     	<!-- Cambio de Estilos -->
-		<script src="js/cambiarEstilos.js"></script>
+        <script src="js/cambiarEstilos.js"></script>
         <!-- Optional JavaScript -->
         <!-- jQuery first then Bootstrap JS -->
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/bootstrap.js"></script>
-        <!--  Font Awesome (Icons) -->
-        <script src="js/fontawesome-all.js"></script>
+
         <!--  Construcción página -->
         <script src="js/buildpage.js"></script>
 
