--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -331,9 +331,9 @@
                         <h1 class="text-center my-4">FASE FINAL</h1>
                     </div>                 
                 </div>
-                <div class="row text-center my-4">
+                <div class="row my-4">
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-left" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero A</li>
                                 <li class="list-group-item">Segundo B</li>
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-right" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero B</li>
                                 <li class="list-group-item">Segundo A</li>
@@ -349,9 +349,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row text-center my-4">
+                <div class="row my-4">
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-left" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero C</li>
                                 <li class="list-group-item">Segundo D</li>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-right" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero D</li>
                                 <li class="list-group-item">Segundo C</li>
@@ -367,9 +367,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row text-center my-4">
+                <div class="row my-4">
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-left" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero E</li>
                                 <li class="list-group-item">Segundo F</li>
@@ -377,7 +377,7 @@
                         </div>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-right" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero F</li>
                                 <li class="list-group-item">Segundo E</li>
@@ -385,9 +385,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row text-center my-4">
+                <div class="row my-4">
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-left" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero G</li>
                                 <li class="list-group-item">Segundo H</li>
@@ -395,7 +395,7 @@
                         </div>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card text-right" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Primero H</li>
                                 <li class="list-group-item">Segundo G</li>
@@ -405,26 +405,6 @@
                 </div>
             </div>
         </section>
-
-
-        <!-- Modals -->
-        <div class="modal fade" id="modal-equipo1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel"></h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <footer>
             <div class="container">
