--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -9,7 +9,7 @@
         <link href="css/bootstrap.css" rel="stylesheet">
 
         <!-- Estilo personalizado CSS -->
-        <link id="pagestyle" rel="stylesheet" href="css/estilo.css">
+        <link id="pagestyle" rel="stylesheet">
 
         <!-- Page icon -->
         <link rel="icon" 
@@ -417,10 +417,10 @@
                 </div>
             </div>
         </footer>
-
 		
-    	<!-- Cambio de Estilos -->
-        <script src="js/cambiarEstilos.js"></script>
+    	<!-- Estilos -->
+        <script src="js/temas.js"></script>
+        
         <!-- Optional JavaScript -->
         <!-- jQuery first then Bootstrap JS -->
         <script src="js/jquery-3.3.1.js"></script>
